# llmctx

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/llmctx/: Cargo.toml
crates/llmctx/assets/: default-config.toml
crates/llmctx/assets/themes/: dracula.tmTheme
crates/llmctx/src/: lib.rs  main.rs
crates/llmctx/src/app/: export.rs  mod.rs  preview.rs  scan.rs  search.rs  selection.rs  session.rs  tokens.rs
crates/llmctx/src/domain/: errors.rs  mod.rs  model.rs
crates/llmctx/src/infra/: clipboard.rs  config.rs  fs.rs  git.rs  highlight.rs  logging.rs  mod.rs  plugins.rs
crates/llmctx/src/ui/: app.rs  mod.rs
crates/llmctx/src/ui/components/: command_palette.rs  file_tree.rs  mod.rs  preview.rs  summary.rs
crates/llmctx/tests/: preview_snapshot.rs
crates/llmctx/tests/snapshots/: preview_snapshot__preview_default.snap
docs/: ci-governance.md  linting.md  testing.md
tests/: cli_smoke.rs  export.rs
xtask/: Cargo.toml
xtask/src/: main.rs
