[workspace]
members = [
    "crates/llmctx"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"
ratatui = { version = "0.27", features = ["all-widgets"] }
crossterm = "0.27"
reedline = "0.30"
ignore = "0.4"
gix = "0.66"
globset = "0.4"
regex = "1"
grep-searcher = "0.1"
rayon = "1"
tiktoken-rs = "0.5"
syntect = "5"
arboard = "3"
notify = "6"
minijinja = "1"
dashmap = "5"
parking_lot = "0.12"
serde_yaml = "0.9"

